Added sharebar variable to template, for control of showing/hiding sharebars

--- a/public/mockup.html
+++ b/public/mockup.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="keywords">
     <meta name="description">
-    <title>Citizens Advice style guide - Before you get work done on your home
+    <title>Citizens Advice style guide - Before you get building work done
     </title>
     <!-- Mobile Specific Metas-->
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
@@ -71,7 +71,7 @@
       <div class="main-content">
         <div id="main" role="main" class="main-content__right">
           <div class="title">
-            <h1 class="title__heading js-ref"><span class="title__title">Before you get work done on your home</span></h1>
+            <h1 class="title__heading js-ref"><span class="title__title">Before you get building work done</span></h1>
           </div>
           <div class="title__subheading">This advice is for 
             <button id="showSimpleModal" type="button" class="btn btn-primary-outline btn-small">England</button><a href="javascript:emailCurrentPage()" data-track="Email page" class="a-social-email">Email</a><a href="javascript:window.print();" data-track="Print" class="a-social-print">Print</a>
@@ -319,40 +319,32 @@
               </section>
             </div>
           </div>
-          <div class="title__subheading--footer">
-            <p>Share this page</p><a href="https://twitter.com/share?url=" data-track="Twitter" rel="external" class="a-social-twitter">Twitter</a><a href="https://www.facebook.com/sharer/sharer.php?u=" data-track="Facebook" rel="external" class="a-social-facebook">Facebook</a><a href="https://plus.google.com/share?url=" data-track="Google+" rel="external" class="a-social-google-plus">Google Plus</a><a href="whatsapp://send" data-text="share?url=" data-track="whatsapp" rel="external" class="a-social-whatsapp">Whatsapp</a>
-          </div>
         </div>
         <nav class="side-nav-beta">
           <ul>
-            <li class="side-nav-beta__heading -active -open"><a><span>Builders and home improvements</span></a></li>
+            <li class="side-nav-beta__heading -active -open"><a><span>Home improvements</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="Before you get work done on your home" class="-current">Before you get work done on your home</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Before you get building work done" class="-current">Before you get building work done</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Problems with home improvements">Problems with home improvements</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Problem with building work, decorating or home improvements">Problem with building work, decorating or home improvements</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="#" title="Cancelling building or decorating work">Cancelling building or decorating work</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="#" title="Building organisations">Building organisations</a>
                 </li>
               </ul>
             </li>
           </ul>
         </nav>
-        <nav class="side-nav-beta sibling">
-          <ul>
-            <li class="side-nav-beta__heading -active -open"><a><span>Sibling categories</span></a></li>
-            <li>
-              <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="Sibling two">Sibling two</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Sibling three">Sibling three</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Sibling four">Sibling four</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Sibling five">Sibling five</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </nav>
+        <!--+sidebarSiblings([
+        {title: "Sibling two", href: "#"},
+        {title: "Sibling three", href: "#"},
+        {title: "Sibling four", href: "#"},
+        {title: "Sibling five", href: "#"}
+        ])
+        
+        -->
         <div class="print-only">
           <h2>This section is print only</h2>
         </div>
