--- a/public/mockup.html
+++ b/public/mockup.html
@@ -95,7 +95,7 @@
                 </div>
               </div>
               <section id="step1">
-                <h2>Step 1: Check if you need permission or approval</h2>
+                <h2 class="ref-heading"><span class="ref-heading__heading">Step 1: Check if you need permission or approval</span><span class="ref-heading__toggle ref-heading__toggle--on"><a href="#!" class="js-toggle-ref">Added</a></span></h2>
                 <p>You may have to get more than one kind of permission or approval before you go ahead with work on your home.</p>
                 <p>Always check if you need:</p>
                 <ul>
@@ -116,7 +116,7 @@
                 </div>
               </section>
               <section id="step2">
-                <h2>Step 2: Find good builders or contractors</h2>
+                <h2 class="ref-heading"><span class="ref-heading__heading">Step 2: Find good builders or contractors</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
                 <p>Recommendations and references are good ways to find reliable contractors who do a good job.</p>
                 <p>If you can’t get personal recommendations from people you know, ask contractors for references. It’s best to get:</p>
                 <ul>
@@ -167,7 +167,7 @@
                 <p>When you meet them, write down what they say they’ll do - if they don’t end up doing it, having it in writing can help you hold them to their word or get some of your money back.</p>
               </section>
               <section id="step3">
-                <h2>Step 3: Get quotes before you decide who to use</h2>
+                <h2 class="ref-heading"><span class="ref-heading__heading">Step 3: Get quotes before you decide who to use</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
                 <p>A quote is a promise from the contractor to do the work at a fixed price.</p>
                 <p>It’s a good idea to get at least 3 written quotes before you decide on a contractor. Comparing quotes will help you decide if you’re getting a fair price.</p>
                 <p>Don’t rely on a verbal quote - get it in writing. After you say yes to a quote, it’s a binding agreement between you and the contractor, whether it’s written down or not. But having it in writing means you can check what you agreed and prove it if there’s a dispute later.</p>
@@ -209,7 +209,7 @@
                 <p>You can download a PDF of a <a href="#">sample quote</a>.</p>
               </section>
               <section id="step4">
-                <h2>Step 4: Check there’s insurance in place</h2>
+                <h2 class="ref-heading"><span class="ref-heading__heading">Step 4: Check there’s insurance in place</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
                 <h3>Contractors’ insurance - what to check</h3>
                 <p>Ask to see insurance policies and check they don’t run out before the work will be finished. If it’s insurance they must have, they have to let you see the policy.</p>
                 <h4>Insurance they must have</h4>
@@ -230,7 +230,7 @@
                 </div>
               </section>
               <section id="step5">
-                <h2>Step 5: Get a written contract</h2>
+                <h2 class="ref-heading"><span class="ref-heading__heading">Step 5: Get a written contract</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
                 <p>As soon as you give a contractor the go-ahead, you’ve made a contract with them, even if it’s not written down.</p>
                 <p>But you should always try to get a contract in writing before you give the go-ahead. If the contractor doesn’t do what you agreed, a written contract can help you get what you paid for at least get some of your money back.</p>
                 <div class="callout">
@@ -305,7 +305,7 @@
                 </div>
               </section>
               <section id="step6">
-                <h2>Step 6: Be prepared to deal with problems</h2>
+                <h2 class="ref-heading"><span class="ref-heading__heading">Step 6: Be prepared to deal with problems</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
                 <p>Get the contractor’s full contact details before work starts. If you know how to get in touch, it’s easier to deal with any problems that come up.</p>
                 <p>As soon as something happens that you’re not happy with:</p>
                 <ul>
