Add general content style to index

--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,7 @@
             <div class="span3">
               <h2 id="templates">Templates</h2>
               <ul>
+                <li><a href="content.html">Content example</a></li>
                 <li><a href="long-form.html">Long form content</a></li>
                 <!--li-->
                 <!--	a(href="advisor.html") Advisor content-->
