- Removed icon from adviser callouts - Added adviser callouts to styleguide - Added adviser callout styles to .dap-panel--adviser

--- a/public/callout.html
+++ b/public/callout.html
@@ -127,6 +127,24 @@
 	&lt;h3&gt;Callout quote&lt;/h3&gt;
 	&lt;p&gt;Also referred to as Blockquote, this style is when a quote needs to be displayed.&lt;/p&gt;
 &lt;/div&gt;</code></pre>
+            <div class="example-box-plain">
+              <div class="callout--adviser">
+                <h3>Adviser content</h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+              </div>
+              <div class="callout--adviser callout--icon">
+                <h3>Adviser content with icon</h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+              </div>
+            </div>
+            <pre><code class="language-html">&lt;div class="callout--adviser"&gt;
+	&lt;h3&gt;Adviser content&lt;/h3&gt;
+	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+&lt;/div&gt;
+&lt;div class="callout--adviser callout--icon"&gt;
+	&lt;h3&gt;Adviser content with icon&lt;/h3&gt;
+	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+&lt;/div&gt;</code></pre>
             <h2>Callouts combined</h2>
             <p>These callouts can be combined both consecutively or combined, someexamples are shown below.</p>
             <div class="example-box-plain">
