--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
               <h2 id="templates">Templates</h2>
               <ul>
                 <li><a href="content.html">Content example</a></li>
-                <li><a href="long-form.html">Long form content</a></li>
+                <li><a href="long-form.html">Long form content example</a></li>
                 <!--li-->
                 <!--	a(href="advisor.html") Advisor content-->
                 <li><a href="section-index.html">Section index</a></li>
