Restructured docs to use styles, modules and templates

--- a/public/index.html
+++ b/public/index.html
@@ -55,8 +55,8 @@
             </div>
           </div>
           <div class="row">
-            <div class="span3">
-              <h2 id="atoms">Atoms</h2>
+            <div class="span4">
+              <h2 id="styles">Styles</h2>
               <ul>
                 <li><a href="typography.html">Typography</a></li>
                 <li><a href="colours.html">Colours</a></li>
@@ -78,17 +78,12 @@
                 </li>
               </ul>
             </div>
-            <div class="span3">
-              <h2 id="molecules">Molecules</h2>
+            <div class="span4">
+              <h2 id="modules">Modules</h2>
               <ul>
                 <li><a href="callout.html">Callout</a></li>
                 <li><a href="collapse.html">Collapse</a></li>
                 <li><a href="section-notice.html">Section Notices</a></li>
-              </ul>
-            </div>
-            <div class="span3">
-              <h2 id="organisms">Organisms</h2>
-              <ul>
                 <li><a href="toolbar.html">Content toolbar</a></li>
                 <li><a href="cookie-monster.html">Cookie Monster</a></li>
                 <li> 
@@ -101,7 +96,7 @@
                 </li>
               </ul>
             </div>
-            <div class="span3">
+            <div class="span4">
               <h2 id="templates">Templates</h2>
               <ul>
                 <li><a href="content.html">Content example</a></li>
