--- a/public/overlay.html
+++ b/public/overlay.html
@@ -33,7 +33,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#organisms" title="Organisms">Organisms</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#modals" title="Modals">Modals</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Modal/Overlay</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#modules" title="Modules">Modules</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#modals" title="Modals">Modals</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Modal/Overlay</span>
         </div>
       </nav>
       <div class="main-content">
