--- a/public/section-notice.html
+++ b/public/section-notice.html
@@ -33,7 +33,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#molecules" title="Molecules">Molecules</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Section Notices</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#modules" title="Modules">Modules</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Section Notices</span>
         </div>
       </nav>
       <aside class="section-notice">
