--- a/public/tables.html
+++ b/public/tables.html
@@ -33,7 +33,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#atoms" title="Atoms">Atoms</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Tables</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#styles" title="Styles">Styles</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Tables</span>
         </div>
       </nav>
       <div class="main-content">
