Include new alternative button

--- a/public/buttons.html
+++ b/public/buttons.html
@@ -56,6 +56,26 @@
 &lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
 &lt;button type="submit" class="btn btn-primary tick-button-icon"&gt;Submit&lt;/button&gt;
 &lt;button type="button" class="btn btn-primary search-button-icon"&gt;Search&lt;/button&gt;</code></pre>
+              <!-- Testing back button-->
+              <div class="example-box-plain">
+                <label for="buttonDescription">Buttons (directions alternative)</label>
+                <button type="button" class="btn btn-primary-cancel back-button-icon">Back</button>
+                <button type="button" class="btn btn-primary-cancel left-cancel-button-icon">Cancel</button>
+                <!-- Recommending we use the lighter back button to differentiate between purposes-->
+              </div>
+              <pre><code class="language-html">&lt;label for="buttonDescription"&gt;Buttons (directions)&lt;/label&gt;
+&lt;button type="button" class="btn btn-primary-cancel back-button-icon"&gt;Back&lt;/button&gt;
+&lt;button type="button" class="btn btn-primary-cancel left-cancel-button-icon"&gt;Cancel&lt;/button&gt;</code></pre>
+              <!-- Cmobining back button-->
+              <div class="example-box-plain">
+                <label for="buttonDescription">Buttons combined (directions alternative)</label>
+                <button type="button" class="btn btn-primary-cancel back-button-icon">Back</button>
+                <button type="button" class="btn btn-primary right-button-icon">Continue</button>
+                <!-- Recommending we use the lighter back button to differentiate between purposes-->
+              </div>
+              <pre><code class="language-html">&lt;label for="buttonDescription"&gt;Buttons (directions)&lt;/label&gt;
+&lt;button type="button" class="btn btn-primary-cancel back-button-icon"&gt;Back&lt;/button&gt;
+&lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;</code></pre>
               <div class="example-box-plain">
                 <label for="buttonDescription">Buttons (actions)</label>
                 <button type="button" class="btn btn-secondary email-button-icon">Email</button>
