--- a/public/buttons.html
+++ b/public/buttons.html
@@ -63,7 +63,7 @@
                 <button type="button" class="btn btn-primary-cancel left-cancel-button-icon">Cancel</button>
                 <!-- Recommending we use the lighter back button to differentiate between purposes-->
               </div>
-              <pre><code class="language-html">&lt;label for="buttonDescription"&gt;Buttons (directions)&lt;/label&gt;
+              <pre><code class="language-html">&lt;label for="buttonDescription"&gt;Buttons (directions alternative)&lt;/label&gt;
 &lt;button type="button" class="btn btn-primary-cancel back-button-icon"&gt;Back&lt;/button&gt;
 &lt;button type="button" class="btn btn-primary-cancel left-cancel-button-icon"&gt;Cancel&lt;/button&gt;</code></pre>
               <!-- Cmobining back button-->
@@ -73,7 +73,7 @@
                 <button type="button" class="btn btn-primary right-button-icon">Continue</button>
                 <!-- Recommending we use the lighter back button to differentiate between purposes-->
               </div>
-              <pre><code class="language-html">&lt;label for="buttonDescription"&gt;Buttons (directions)&lt;/label&gt;
+              <pre><code class="language-html">&lt;label for="buttonDescription"&gt;Buttons combined (directions alternative)&lt;/label&gt;
 &lt;button type="button" class="btn btn-primary-cancel back-button-icon"&gt;Back&lt;/button&gt;
 &lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;</code></pre>
               <div class="example-box-plain">
