--- a/public/long-form.html
+++ b/public/long-form.html
@@ -87,13 +87,11 @@
               <p>Follow these steps before you get building work, renovations or repairs done on your home. They’ll help you save time, money and stress. They’ll also help you avoid problems with builders, decorators or other contractors, eg plumbers and electricians.</p>
               <div id="overview" class="steps">
                 <h3>On this page</h3>
-                <div class="flex-row">
-                  <ul class="col-md-6">
+                <div class="columns">
+                  <ul>
                     <li><a href="#step1">Step 1: Check if you need permission or approval</a></li>
                     <li><a href="#step2">Step 2: Find good builders or contractors</a></li>
                     <li><a href="#step3">Step 3: Get quotes before you decide who to use</a></li>
-                  </ul>
-                  <ul class="col-md-6">
                     <li><a href="#step4">Step 4: Check there’s insurance in place</a></li>
                     <li><a href="#step5">Step 5: Get a written contract</a></li>
                     <li><a href="#step6">Step 6: Be prepared to deal with problems</a></li>
