Added code example to tables

--- a/public/tables.html
+++ b/public/tables.html
@@ -42,37 +42,70 @@
         </div>
         <div class="articleContent row">
           <div class="span8">
-            <table style="width:100%">
-              <thead>
-                <tr>
-                  <th scope="col">th</th>
-                  <th scope="col">th</th>
-                  <th scope="col">th</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>td</td>
-                  <td>td</td>
-                  <td>td</td>
-                </tr>
-                <tr>
-                  <td>td</td>
-                  <td>td</td>
-                  <td>td</td>
-                </tr>
-                <tr>
-                  <td>td</td>
-                  <td>td</td>
-                  <td>td</td>
-                </tr>
-                <tr>
-                  <td>td</td>
-                  <td>td</td>
-                  <td>td</td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="example-box-plain">
+              <table style="width:100%">
+                <thead>
+                  <tr>
+                    <th scope="col">th</th>
+                    <th scope="col">th</th>
+                    <th scope="col">th</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>td</td>
+                    <td>td</td>
+                    <td>td</td>
+                  </tr>
+                  <tr>
+                    <td>td</td>
+                    <td>td</td>
+                    <td>td</td>
+                  </tr>
+                  <tr>
+                    <td>td</td>
+                    <td>td</td>
+                    <td>td</td>
+                  </tr>
+                  <tr>
+                    <td>td</td>
+                    <td>td</td>
+                    <td>td</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <pre><code class="language-html">&lt;table&gt;
+	&lt;thead&gt;
+		&lt;tr&gt;
+			&lt;th scope="col"&gt;th&lt;/th&gt;
+			&lt;th scope="col"&gt;th&lt;/th&gt;
+			&lt;th scope="col"&gt;th&lt;/th&gt;
+		&lt;/tr&gt;
+	&lt;/thead&gt;
+	&lt;tbody&gt;
+		&lt;tr&gt;
+			&lt;td&gt;td&lt;/td&gt;
+			&lt;td&gt;td&lt;/td&gt;
+			&lt;td&gt;td&lt;/td&gt;
+		&lt;/tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;td&lt;/td&gt;
+			&lt;td&gt;td&lt;/td&gt;
+			&lt;td&gt;td&lt;/td&gt;
+		&lt;/tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;td&lt;/td&gt;
+			&lt;td&gt;td&lt;/td&gt;
+			&lt;td&gt;td&lt;/td&gt;
+		&lt;/tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;td&lt;/td&gt;
+			&lt;td&gt;td&lt;/td&gt;
+			&lt;td&gt;td&lt;/td&gt;
+		&lt;/tr&gt;
+	&lt;/tbody&gt;
+&lt;/table&gt;</code></pre>
           </div>
         </div>
         <div class="print-only">
