--- a/public/new-grid.html
+++ b/public/new-grid.html
@@ -43,8 +43,8 @@
         <div class="articleContent">
           <div class="row">
             <div class="span12">
-              <p>The default page width is 1080px with a 12-spanumn grid. It is recommended for most content to use the two-thirds (content first) layout. This restricts line length to a more managable size and encourages a better reading pattern, <a href="#">improving cognition</a>.</p>
-              <p>The layout for pages should be 12 spanumns (full width), 3 or 4 spanumn, other variations can be used if needed.</p>
+              <p>The default page width is 1080px with a 12-column grid. It is recommended for most content to use the two-thirds (content first) layout. This restricts line length to a more managable size and encourages a better reading pattern, <a href="#">improving cognition</a>.</p>
+              <p>The layout for pages should be 12 columns (full width), 3 or 4 column, other variations can be used if needed.</p>
             </div>
           </div>
           <div class="row">
